# advent-of-code-2024

./: .gitignore  .ocamlformat  .pre-commit-config.yaml  README.md  dune-project
lib/: bench.ml  dune  utils.ml
lib/day_gen/: dune  dune_template  new_day.ml  template
src/day1/: dune  part1.ml  part2.ml
src/day10/: dune  part1.ml  part2.ml
src/day11/: dune  part1.ml  part2.ml
src/day13/: dune  part1.ml  part2.ml
src/day14/: dune  part1.ml  part2.ml
src/day2/: dune  part1.ml  part2.ml
src/day3/: dune  part1.ml  part2.ml
src/day4/: dune  part1.ml  part2.ml
src/day5/: dune  part1.ml  part2.ml
src/day6/: dune  part1.ml  part2.ml
src/day7/: dune  part1.ml  part2.ml
src/day8/: dune  part1.ml  part2.ml
src/day9/: dune  part1.ml  part2.ml
