(lang dune 3.16)

(name aoc2024)

(generate_opam_files false)

(source
 (github ComanderP/advent-of-code-2024))

(authors "Me")

(maintainers "Me")

(license None)

(documentation https://url/to/documentation)

(package
 (name aoc2024)
 (synopsis "My Advent of Code 2024 solutions")
 (description "Wowzers!")
 (depends ocaml dune)
 (tags
  (aoc "advent of code" 2024 aoc2024)))

(map_workspace_root false)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
